actualbudget/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: actualbudget
  labels:
    name: actualbudget
