actualbudget/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget-deployment
  namespace: actualbudget
  labels:
    app: actualbudget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      containers:
        - name: actualbudget
          image: actualbudget/actual-server:latest
          ports:
            - name: website
              containerPort: 5006
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 2Gi
              cpu: "1"
          volumeMounts:
          - name: actualbudget-local-data-volume
            mountPath: "/data"
      volumes:
      - name: actualbudget-local-data-volume
        persistentVolumeClaim:
          claimName: actualbudget-local-data-claim
