actualbudget/service.yml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget-webserver
  namespace: actualbudget
  labels:
    app: actualbudget-webserver
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5006
      protocol: TCP
      name: http
  selector:
    app: actualbudget
