actualbudget/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-deployment-host
  namespace: actualbudget
spec:
  ingressClassName: traefik
  rules:
  - host: "actualbudget.home"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actualbudget-webserver
            port:
              number: 80
